Adding simple validation tests.

--- a/me.yaml
+++ b/me.yaml
@@ -12,7 +12,14 @@
     - url: "/api/me.json" #Basic validation test
     - auth_username: "admin"
     - auth_password: "district"
-    - group: "Field validation"
+    - group: "Field validation which succeeeds"
     - validators:
         - compare: {jsonpath_mini: "name",  comparator: "eq",  expected: 'John Traore'}
         - compare: {jsonpath_mini: "organisationUnits.0.name",  comparator: "eq",  expected: 'Sierra Leone'}
+- test:
+    - url: "/api/me.json"
+    - auth_username: "admin"
+    - auth_password: "district"
+    - group: "Field validations which should fail"
+    - validators:
+     - compare: {jsonpath_mini: "job", comparator: "eq", expected: 0}
