--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
 - '2.7'
 install: "pip install -r requirements.txt"
 script:
-- resttest.py https://apps.dhis2.org/dev/ me.yaml
+- python runtests.py
 
