--- a/dataElementOperations.yaml
+++ b/dataElementOperations.yaml
@@ -17,7 +17,7 @@
     - auth_username: "admin"
     - auth_password: "district"
     - method: "GET"
-    - headers: {Content-Type: application/json}
+    - headers: {Accept: application/json}
     - expected_status: [200]
     - validators:
         - compare: {jsonpath_mini: "dataElements.0.name",  comparator: "eq",  expected: "TestDataElement"}
@@ -48,7 +48,7 @@
     - auth_username: "admin"
     - auth_password: "district"
     - method: "DELETE"
-    - headers: {Content-Type: application/json}
+    - headers: {Accept: application/json}
     - expected_status: [204]
 - test:
     - group: "Data element delete check"
@@ -56,5 +56,5 @@
     - auth_username: "admin"
     - auth_password: "district"
     - method: "GET"
-    - headers: {Content-Type: application/json}
+    - headers: {Accept: application/json}
     - expected_status: [404]
