Put search test back in and fix payload.

--- a/dataElementOperations.yaml
+++ b/dataElementOperations.yaml
@@ -3,6 +3,14 @@
 - config:
     - testset: "Data element CRUD operations"
 - test:
+    - group: "Data element inital check"
+    - url: "api/dataElements/abcd1234567/"
+    - auth_username: "admin"
+    - auth_password: "district"
+    - method: "GET"
+    - headers: {Content-Type: application/json, Accept: application/json}
+    - expected_status: [404]
+- test:
     - group: "Data element creation"
     - url: "/api/dataElements/"
     - auth_username: "admin"
@@ -11,6 +19,17 @@
     - headers: {Content-Type: application/json, Accept: application/json}
     - expected_status: [200]
     - body: {file: sampleDataElement.json}
+- test:
+    - group: "Data element search"
+    - url: "/api/dataElements.json?filter=name:eq:TestDataElement"
+    - auth_username: "admin"
+    - auth_password: "district"
+    - method: "GET"
+    - headers: {Content-Type: application/json, Accept: application/json}
+    - expected_status: [200]
+    - validators:
+        - compare: {jsonpath_mini: "dataElements.0.name",  comparator: "eq",  expected: "TestDataElement"}
+        - compare: {jsonpath_mini: "dataElements.0.id",  comparator: "eq",  expected: "abcd1234567"}
 - test:
     - group: "Data element update"
     - url: "/api/dataElements/abcd1234567/name/"
@@ -27,7 +46,7 @@
     - auth_password: "district"
     - method: "GET"
     - expected_status: [200]
-    #- headers: {Content-Type: application/json, Accept: application/json}
+    #- headers: {Content-Type: application/json, Accept: application/json} <-Should not fail
     - validators:
         - compare: {jsonpath_mini: "meta.allowPublicAccess",  comparator: "eq",  expected: true}
         - compare: {jsonpath_mini: "meta.allowExternalAccess",  comparator: "eq",  expected: false}
