--- a/tests/schema_integrity/chart.yaml
+++ b/tests/schema_integrity/chart.yaml
@@ -18,61 +18,4 @@
         - compare: {jsonpath_mini: "namespace",  comparator: "eq",  expected: "http://dhis2.org/schema/dxf/2.0"}
         - compare: {jsonpath_mini: "singular",  comparator: "eq",  expected: "chart"}
         - compare: {jsonpath_mini: "authorities",  comparator: "count_eq",  expected: 2}
-        - compare: {jsonpath_mini: "properties",  comparator: "count_eq",  expected: 57}
-        - compare: {names: "properties",  comparator: "contains",  expected: "showData"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "baseLineValue"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "publicAccess"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "userOrganisationUnitChildren"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "program"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "type"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "lastUpdated"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "hideEmptyRows"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "attributeDimension"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "parentGraphMap"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "userOrganisationUnit"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "href"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "filterDimension"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "id"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "organisationUnitGroup"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "itemOrganisationUnitGroup"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "userGroupAccess"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "domainAxisLabel"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "created"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "rangeAxisLabel"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "sortOrder"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "name"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "rangeAxisDecimals"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "topLimit"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "aggregationType"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "dataDimensionItem"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "code"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "access"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "userOrganisationUnitGrandChildren"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "displayName"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "column"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "hideSubtitle"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "title"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "hideLegend"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "externalAccess"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "rangeAxisMinValue"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "organisationUnitLevel"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "dataElementDimension"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "relativePeriods"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "rangeAxisSteps"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "targetLineLabel"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "period"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "organisationUnit"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "categoryDimension"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "dataElementGroup"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "targetLineValue"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "filter"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "row"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "baseLineLabel"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "digitGroupSeparator"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "categoryOptionGroup"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "hideTitle"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "regression"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "series"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "rangeAxisMaxValue"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "category"}
-        - compare: {names: "properties",  comparator: "contains",  expected: "user"}
+        - compare: {names: "properties",  comparator: "equal_items",  expected: "['showData','baseLineValue','publicAccess','userOrganisationUnitChildren','program','type','lastUpdated','hideEmptyRows','attributeDimension','parentGraphMap','userOrganisationUnit','href','filterDimension','id','organisationUnitGroup','itemOrganisationUnitGroup','userGroupAccess','domainAxisLabel','created','rangeAxisLabel','sortOrder','name','rangeAxisDecimals','topLimit','aggregationType','dataDimensionItem','code','access','userOrganisationUnitGrandChildren','displayName','column','hideSubtitle','title','hideLegend','externalAccess','rangeAxisMinValue','organisationUnitLevel','dataElementDimension','relativePeriods','rangeAxisSteps','targetLineLabel','period','organisationUnit','categoryDimension','dataElementGroup','targetLineValue','filter','row','baseLineLabel','digitGroupSeparator','categoryOptionGroup','hideTitle','regression','series','rangeAxisMaxValue','category','user']"}
